--- a/sidebar/index.html
+++ b/sidebar/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>Pure Sidebar</title>
     <link rel="stylesheet" href="styles.css">
     <script src="index.js" defer></script>
   </head>
