Added more styling to image carousel

--- a/carousel/index.html
+++ b/carousel/index.html
@@ -6,6 +6,8 @@
     <title>Pure Carousel</title>
   </head>
   <body>
+    <h1>Carousel</h1>
+    <p>Click the buttons!</p>
     <div class="carousel">
       <div class="slider">
         <img src="https://a.ltrbxd.com/resized/sm/upload/85/io/38/dz/vfzE3pjE5G7G7kcZWrA3fnbZo7V-0-200-0-300-crop.jpg?k=c57a0ac6a0" />
