Improved stylings for the modal

--- a/modal/index.html
+++ b/modal/index.html
@@ -6,10 +6,10 @@
     <script src="index.js" defer></script>
   </head>
   <body>
-    <button class="toggle" style="top: 50%; left: 45%">Show modal</button>
-
+    <p>Modals or dialogs are generally used for user notifications or other popup functionalities.</p>
+    <button class="toggle" style="top: 50%; left: 50%; width: 150px; margin-left: -75px;">Show modal</button>
     <div class="modal">
-      <button class="toggle" style="border-radius: 25px; padding: 10px; top: 5px; right: 5px">&times;</button>
+      <button class="toggle" style="padding: 10px; top: 5px; right: 5px; width: 35px;">&times;</button>
       <div>You may close this modal now</div>
     </div>
   </body>
