Improved sidebar styling

--- a/sidebar/index.html
+++ b/sidebar/index.html
@@ -6,14 +6,18 @@
     <script src="index.js" defer></script>
   </head>
   <body>
+    <div class="descriptor">
+      <h1>Sidebar</h1>
+      <p>Click on the hamburger!</p>
+    </div>
     <button class="hamburger">
       <img src="../images/hamburger-icon.png" />
     </button>
     <nav class="navbar">
       <ul class="links">
-        <li><a href="#">Home</li>
-        <li><a href="#">About</li>
-        <li><a href="#">Contact</li>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Contact</a></li>
       </ul>
     </nav>
   </body>
