--- a/carousel/index.html
+++ b/carousel/index.html
@@ -6,22 +6,26 @@
     <title>Pure Carousel</title>
   </head>
   <body>
-    <h1>Carousel</h1>
-    <p>Click the buttons!</p>
-    <div class="carousel">
-      <div class="slider">
-        <img src="https://a.ltrbxd.com/resized/sm/upload/85/io/38/dz/vfzE3pjE5G7G7kcZWrA3fnbZo7V-0-200-0-300-crop.jpg?k=c57a0ac6a0" />
-        <img src="https://a.ltrbxd.com/resized/film-poster/5/1/0/6/2/51062-stalker-0-200-0-300-crop.jpg?k=43a76f97a4" />
-        <img src="https://a.ltrbxd.com/resized/film-poster/5/1/5/2/8/51528-solaris-0-200-0-300-crop.jpg?k=10bd24f058" />
-        <img src="https://a.ltrbxd.com/resized/sm/upload/fe/jp/49/l9/eDiexVN4nO3ZdDZCDMiJOX5fQ5r-0-200-0-300-crop.jpg?k=6d3f852328" />
-        <img src="https://a.ltrbxd.com/resized/film-poster/3/5/1/6/6/35166-red-desert-0-200-0-300-crop.jpg?k=8d3c2baf77" />
-        <img src="https://a.ltrbxd.com/resized/film-poster/4/9/8/8/9/49889-modern-times-0-200-0-300-crop.jpg?k=f773ea90d1" />
+    <div class="card">
+      <div class="title-card">
+        <h1>Carousel</h1>
+        <p>Click the buttons!</p>
       </div>
-    </div>
-    <br />
-    <div class="buttons">
-      <button id="prev">◀</button>
-      <button id="next">▶</button>
+      <div class="carousel">
+        <div class="slider">
+          <img src="https://a.ltrbxd.com/resized/sm/upload/85/io/38/dz/vfzE3pjE5G7G7kcZWrA3fnbZo7V-0-200-0-300-crop.jpg?k=c57a0ac6a0" />
+          <img src="https://a.ltrbxd.com/resized/film-poster/5/1/0/6/2/51062-stalker-0-200-0-300-crop.jpg?k=43a76f97a4" />
+          <img src="https://a.ltrbxd.com/resized/film-poster/5/1/5/2/8/51528-solaris-0-200-0-300-crop.jpg?k=10bd24f058" />
+          <img src="https://a.ltrbxd.com/resized/sm/upload/fe/jp/49/l9/eDiexVN4nO3ZdDZCDMiJOX5fQ5r-0-200-0-300-crop.jpg?k=6d3f852328" />
+          <img src="https://a.ltrbxd.com/resized/film-poster/3/5/1/6/6/35166-red-desert-0-200-0-300-crop.jpg?k=8d3c2baf77" />
+          <img src="https://a.ltrbxd.com/resized/film-poster/4/9/8/8/9/49889-modern-times-0-200-0-300-crop.jpg?k=f773ea90d1" />
+        </div>
+      </div>
+      <br />
+      <div class="buttons">
+        <button id="prev">◀</button>
+        <button id="next">▶</button>
+      </div>
     </div>
   </body>
 </html>
