--- a/navbar/index.html
+++ b/navbar/index.html
@@ -14,10 +14,14 @@
         </button>
       </div>
       <ul class="links">
-        <li><a href="#">Home</a></li>
         <li><a href="#">About</a></li>
+        <li><a href="#">Mail</a></li>
         <li><a href="#">Contact</a></li>
       </ul>
     </nav>
+    <div class="title">
+      <h1>Navigation Bar</h1>
+      <p>This navigation bar is responsive and shrinks when it hits a certain threshold</p>
+    </div>
   </body>
 </html>
